--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Tutorials on Statistical Models for Events Within Networks
 Version: 0.1.0
 Author: Wouter de Nooy
-Maintainer: TWouter de Nooy <w.denooy@uva.nl>
+Maintainer: Wouter de Nooy <w.denooy@uva.nl>
 Description: Six tutorials on regression models for analyzing events within networks (longitudina data): peer influence, susceptibility, contagion, diffusion, tie valence, and tie creation.
     Develped for the St Petersburg Summer School on Network Analysis, 2021.
 License: AGPL-3
